--- a/requirements.txt
+++ b/requirements.txt
@@ -2,4 +2,6 @@ Flask==2.3.3
 Flask-Session==0.5.0
 Werkzeug==2.3.7
 gunicorn==21.2.0 
-pytest==7.4.2 
+bandit==1.7.9
+pytest==7.4.2
+requests==2.32.0
