--- a/.github/workflows/security.yml
+++ b/.github/workflows/security.yml
@@ -45,46 +45,16 @@ jobs:
           name: pytest-report
           path: tests/test-results/
 
-  zap-dast:
-    runs-on: ubuntu-latest
-    needs: build-and-test
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v3
-
-      - name: Set up Python
-        uses: actions/setup-python@v4
-        with:
-          python-version: '3.10'
-
-      - name: Install Python dependencies
-        run: |
-          python -m pip install --upgrade pip
-          pip install -r requirements.txt
-
-      - name: Start Flask app
-        run: |
-          nohup flask run --host=0.0.0.0 --port=5000 &
-          echo "Waiting for Flask to start..."
-          for i in {1..15}; do
-            curl -s http://localhost:5000 && break
-            sleep 3
-          done
-
-      - name: Prepare ZAP directories
-        run: |
-          mkdir -p $GITHUB_WORKSPACE/zap-reports
-
       - name: Run OWASP ZAP Baseline Scan
         uses: zaproxy/action-baseline@v0.10.0
         with:
-          target: 'http://localhost:5000'
-          report-dir: ${{ github.workspace }}/zap-reports
-          fail-on-risks: true
-          github-report: false   # disables automatic GitHub issue creation
+          target: 'http://localhost:8000'  # Replace with your app's URL
+          format: 'txt'
+          output: 'zap-reports/zap-report.txt'
+        continue-on-error: true
 
       - name: Upload ZAP TXT report
         uses: actions/upload-artifact@v4
         with:
           name: zap-report-txt
-          path: ${{ github.workspace }}/zap-reports/*.txt
+          path: zap-reports/zap-report.txt
