--- a/.github/workflows/security.yml
+++ b/.github/workflows/security.yml
@@ -7,7 +7,7 @@ on:
     branches: [ main ]
 
 jobs:
-  build-and-test:
+  bandit-sast:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
@@ -22,44 +22,59 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
+          pip install bandit
 
-      - name: Run SAST (Bandit)
+      - name: Run Bandit (full scan)
         run: |
-          bandit -r . -lll -f txt -o bandit-report.txt || echo "Bandit completed with issues"
-        continue-on-error: true
+          # -lll = verbose, -r = recursive, --ini = default config, --plugins = all available
+          bandit -r . -lll -f txt -o bandit-report.txt
 
-      - name: Upload Bandit report
+      - name: Upload Bandit TXT report
         uses: actions/upload-artifact@v4
         with:
-          name: bandit-report
+          name: bandit-report-txt
           path: bandit-report.txt
 
-      - name: Run tests
-        run: |
-          pytest || echo "No tests found"
+  zap-dast:
+    runs-on: ubuntu-latest
+    needs: bandit-sast
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v3
 
-      - name: Upload Pytest report
-        if: always()
-        uses: actions/upload-artifact@v4
+      - name: Set up Python
+        uses: actions/setup-python@v4
         with:
-          name: pytest-report
-          path: tests/test-results/
+          python-version: '3.10'
 
-      - name: Create zap-reports directory
-        run: mkdir -p zap-reports
+      - name: Install Python dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install -r requirements.txt
+
+      - name: Start Flask app
+        run: |
+          nohup flask run --host=0.0.0.0 --port=5000 &
+          echo "Waiting for Flask to start..."
+          for i in {1..15}; do
+            curl -s http://localhost:5000 && break
+            sleep 3
+          done
+
+      - name: Prepare ZAP directories
+        run: |
+          mkdir -p $GITHUB_WORKSPACE/zap-reports
 
       - name: Run OWASP ZAP Baseline Scan
         uses: zaproxy/action-baseline@v0.10.0
         with:
-          target: 'http://localhost:8000'  # Replace with your app's URL
-          format: 'txt'
-          output: 'zap-reports/zap-report.txt'
-        continue-on-error: true
+          target: 'http://localhost:5000'
+          report-dir: ${{ github.workspace }}/zap-reports
+          fail-on-risks: true
+          github-report: false   # disables automatic GitHub issue creation
 
       - name: Upload ZAP TXT report
         uses: actions/upload-artifact@v4
         with:
           name: zap-report-txt
-          path: zap-reports/zap-report.txt
-
-
+          path: ${{ github.workspace }}/zap-reports/*.txt
