--- a/.github/workflows/security.yml
+++ b/.github/workflows/security.yml
@@ -24,64 +24,12 @@ jobs:
           pip install -r requirements.txt
           pip install bandit
 
-      - name: Run Bandit (full scan)
+      - name: Install dependencies
+        run: pip install -r requirements.txt
+
+      # 1. Bandit: Security linter for Python (finds common vulnerabilities)
+      - name: Run Bandit (Python SAST)
         run: |
-          # -lll = verbose, -r = recursive, --ini = default config, --plugins = all available
-          bandit -r . -lll -f txt -o bandit-report.txt || echo "Bandit completed with issues"
-
-      - name: Upload Bandit TXT report
-        uses: actions/upload-artifact@v4
-        with:
-          name: bandit-report-txt
-          path: bandit-report.txt
-
-  zap-dast:
-    runs-on: ubuntu-latest
-    needs: bandit-sast
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v3
-
-      - name: Set up Python
-        uses: actions/setup-python@v4
-        with:
-          python-version: '3.10'
-
-      - name: Install Python dependencies
-        run: |
-          python -m pip install --upgrade pip
-          pip install -r requirements.txt
-
-      - name: Start Flask app
-        run: |
-          nohup flask run --host=0.0.0.0 --port=5000 &
-          echo "Waiting for Flask to start..."
-          for i in {1..15}; do
-            curl -s http://localhost:5000 && break
-            sleep 3
-          done
-
-          permissions:
-          contents: read      # needed to checkout code
-          actions: write      # needed to upload artifacts
-          issues: write       # only if you want ZAP to create issues (can be false)
-
-      - name: Prepare ZAP directories
-        run: |
-          mkdir -p $GITHUB_WORKSPACE/zap-reports
-
-      - name: Run OWASP ZAP Baseline Scan
-        uses: zaproxy/action-baseline@v0.10.0
-        with:
-          target: 'http://localhost:5000'
-          report-dir: ${{ github.workspace }}/zap-reports
-          fail-on-risks: true
-          github-report: false   # disables automatic GitHub issue creation
-
-      - name: Upload ZAP TXT report
-        uses: actions/upload-artifact@v4
-        with:
-          name: zap-report-txt
-          path: ${{ github.workspace }}/zap-reports/*.txt
-
-
+          pip install bandit
+          bandit -r . -f html -o bandit_report.html || true # Run even if it finds issues
+        continue-on-error: true # Don't fail the whole job, report
