--- a/.github/workflows/security.yml
+++ b/.github/workflows/security.yml
@@ -1,45 +1,71 @@
-name: Cyberforum Blog Security CI
+name: Cyberforum Security Scan
 
 on:
-  push:
-    branches: [ main ]
   pull_request:
-    branches: [ main ]
+    branches: [ main, master ]
+  push:
+    branches: [ main, master ]
 
 jobs:
-  bandit-sast:
+  security-scan:
+    name: 🔍 SAST & Dependency Scan
     runs-on: ubuntu-latest
+
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v3
+    - name: Checkout code (full history)
+      uses: actions/checkout@v4
+      with:
+        fetch-depth: 0  # Gets full repo history for better analysis
 
-      - name: Set up Python
-        uses: actions/setup-python@v4
-        with:
-          python-version: '3.10'
+    - name: Set up Python
+      uses: actions/setup-python@v4
+      with:
+        python-version: '3.9'  # Pin to your specific version
 
-      - name: Install dependencies
-        run: |
-          python -m pip install --upgrade pip
-          pip install -r requirements.txt
-          pip install bandit
+    - name: Debug - Show environment info
+      run: |
+        echo "Working directory: $(pwd)"
+        echo "Python version: $(python --version)"
+        echo "Pip version: $(pip --version)"
+        ls -la
 
-      - name: Install dependencies
-        run: pip install -r requirements.txt
+    - name: Install project dependencies
+      run: |
+        python -m pip install --upgrade pip
+        if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
 
-      # 1. Bandit: Security linter for Python (finds common vulnerabilities)
-      - name: Run Bandit (Python SAST)
-        run: |
-          pip install bandit
-          bandit -r . -f html -o bandit_report.html || true # Run even if it finds issues
-        continue-on-error: true # Don't fail the whole job, report
+    - name: Install pinned Bandit version
+      run: |
+        # Replace with the version you use locally: `bandit --version`
+        pip install bandit==1.7.5
 
-      # Archive the reports so you can download them from the Actions UI
-      - name: Archive security reports
-        uses: actions/upload-artifact@v4
-        with:
-          name: security-reports
-          path: |
-            bandit_report.html
-          # dependency-check-report.html (if used)
+    - name: Run Bandit scan (consistent with local)
+      run: |
+        echo "Running Bandit from: $(pwd)"
+        echo "Bandit version: $(bandit --version)"
+        
+        # Use explicit path to ensure consistency
+        bandit -r "$GITHUB_WORKSPACE" -f txt -o bandit_text_report.txt
+        bandit -r "$GITHUB_WORKSPACE" -f html -o bandit_report.html
+        
+        # Display text results in logs for immediate visibility
+        echo "=== BANDIT TEXT REPORT ==="
+        cat bandit_text_report.txt
 
+    - name: Upload Bandit reports as artifacts
+      uses: actions/upload-artifact@v4
+      with:
+        name: security-reports
+        path: |
+          bandit_report.html
+          bandit_text_report.txt
+
+    # Optional: Fail the build on high-severity findings
+    - name: Fail on high-severity issues
+      run: |
+        if grep -q "High severity:" bandit_text_report.txt; then
+          echo "❌ High severity security issues found! Failing build."
+          exit 1
+        else
+          echo "✅ No high severity issues found."
+        fi
