--- a/.github/workflows/security.yml
+++ b/.github/workflows/security.yml
@@ -33,13 +33,16 @@ jobs:
       - name: Start Flask application
         run: |
           export FLASK_APP=app.py
-          flask run --host=0.0.0.0 --port=8080 &
+          nohup python app.py &
           sleep 10  # Wait for the app to start
 
       - name: Run OWASP ZAP Scan
-        uses: zaproxy/action-baseline@v0.11.0
+        uses: zaproxy/action-full-scan@v0.10.0
         with:
           target: 'http://localhost:8080'
+          allowIssueWriting: false
+          fail_on_error: false
+          cmd-options: '-a -T 10 -r zap-report.html -w zap-report.txt'
           rules_file_name: 'Light'
           cmd_options: '-a'
 
@@ -57,3 +60,4 @@ jobs:
           path: |
             bandit-report.txt
             bandit-report.html
+
