--- a/.github/workflows/security.yml
+++ b/.github/workflows/security.yml
@@ -24,8 +24,8 @@ jobs:
 
       - name: Run Bandit Security Scan
         run: |
-          bandit -r . -f txt -o bandit-report.txt
-          bandit -r . -f html -o bandit-report.html
+          bandit -r . -f txt -o bandit-report.txt || true
+          bandit -r . -f html -o bandit-report.html || true
 
       - name: Install dependencies
         run: pip install -r requirements.txt
@@ -33,31 +33,32 @@ jobs:
       - name: Start Flask application
         run: |
           export FLASK_APP=app.py
-          nohup python app.py &
-          sleep 10  # Wait for the app to start
+          flask run --host=0.0.0.0 --port=8080 &
+          for i in {1..10}; do
+            nc -z localhost 8080 && echo "Flask started" && break
+            sleep 2
+          done
 
       - name: Run OWASP ZAP Scan
-        uses: zaproxy/action-full-scan@v0.10.0
+        uses: zaproxy/action-baseline@v0.11.0
         with:
           target: 'http://localhost:8080'
-          allowIssueWriting: false
-          fail_on_error: false
-          cmd-options: '-a -T 10 -r zap-report.html -w zap-report.txt'
-          rules_file_name: 'Light'
-          cmd_options: '-a'
+          cmd_options: '-a -r zap-report.html -w zap-report.txt'
 
-      - name: Upload ZAP Report
+      - name: Upload Bandit Reports
         if: always()
         uses: actions/upload-artifact@v4
         with:
-          name: zap-report
-          path: zap-report.html
-
-      - name: Upload Security Reports
-        uses: actions/upload-artifact@v4
-        with:
-          name: security-reports
+          name: bandit-reports
           path: |
             bandit-report.txt
             bandit-report.html
 
+      - name: Upload ZAP Reports
+        if: always()
+        uses: actions/upload-artifact@v4
+        with:
+          name: zap-reports
+          path: |
+            zap-report.html
+            zap-report.txt
