--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -25,14 +25,13 @@ jobs:
         pip install -r requirements.txt
 
 
-    - name: Run Flask app
+    - name: Deploy Flask app
       env:
         FLASK_APP: app.py  # Change this if your main file is different
         FLASK_ENV: development
       run: |
-        flask run --host=0.0.0.0 --port=5000 &
-        sleep 10  # Give the server time to start
-        curl http://localhost:5000  # Test the endpoint
+        nohup python3 app.py &
+        
 
     - name: Run tests
       run: |
