--- a/.github/workflows/security.yml
+++ b/.github/workflows/security.yml
@@ -46,7 +46,7 @@ jobs:
         uses: zaproxy/action-baseline@v0.11.0
         with:
           target: 'http://localhost:8080'
-          cmd_options: '-a -r $GITHUB_WORKSPACE/zap-reports/zap-report.html -w $GITHUB_WORKSPACE/zap-reports/zap-report.txt'
+          cmd_options: '-a -r zap-reports/zap-report.html -w zap-reports/zap-report.txt'
 
       - name: Upload Bandit Reports
         if: always()
@@ -62,5 +62,8 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: zap-reports
-          path: $GITHUB_WORKSPACE/zap-reports/
+          path:  |
+            name: zap-reports.txt
+            path: zap-reports.html
+
 
