--- a/.github/workflows/security.yml
+++ b/.github/workflows/security.yml
@@ -39,16 +39,15 @@ jobs:
             sleep 2
           done
 
-
-      - name: Prepare ZAP directories
-        run: mkdir -p $GITHUB_WORKSPACE/zap-reports
+      - name: Prepare ZAP working folder
+        run: mkdir -p $GITHUB_WORKSPACE/zap-wrk
 
       - name: Run OWASP ZAP Scan
         uses: zaproxy/action-baseline@v0.11.0
         with:
           target: 'http://localhost:8080'
-          cmd_options: '-a -r zap-reports/zap-report.html -w zap-reports/zap-report.txt'
-
+          cmd_options: "-c $GITHUB_WORKSPACE/zap-wrk/zap.yaml -r $GITHUB_WORKSPACE/zap-wrk/zap-report.html -w $GITHUB_WORKSPACE/zap-wrk/zap-report.txt"
+      
       - name: Upload Bandit Reports
         if: always()
         uses: actions/upload-artifact@v4
@@ -63,7 +62,8 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: zap-reports
-          path: zap-reports/
+          path: $GITHUB_WORKSPACE/zap-wrk/
+
 
 
 
