--- a/.github/workflows/dast-scan.yml
+++ b/.github/workflows/dast-scan.yml
@@ -1,9 +1,9 @@
 name: OWASP ZAP DAST Scan
 
 on:
+  workflow_dispatch:  # Allows manual triggering
   push:
-    branches:
-      - main
+    branches: [ main ]
 
 jobs:
   dast-scan:
@@ -23,17 +23,29 @@ jobs:
           pip install -r requirements.txt
           pip install gunicorn
 
-      - name: Run Flask app
+      - name: Run Flask app with Gunicorn
         run: |
-          gunicorn -b 0.0.0.0:5000 'flaskblog:create_app()' &
-        shell: bash
+          # Adjust this command based on your actual app structure:
+          # If your app factory is in flaskblog/__init__.py
+          gunicorn -b 0.0.0.0:5000 app:app &
+          
+          # Alternative if your app is in app.py:
+          # gunicorn -b 0.0.0.0:5000 app:app &
 
-      - name: Wait for the application to start
-        run: sleep 10
+      - name: Wait for application to start
+        run: |
+          sleep 10
+          curl --retry 5 --retry-delay 3 --retry-all-errors http://localhost:5000 || true
 
-      - name: OWASP ZAP Full Scan with Report Artifact
+      - name: Run OWASP ZAP Full Scan
         uses: zaproxy/action-full-scan@v0.12.0
         with:
           target: 'http://localhost:5000'
-          fail_action: false
-          artifact_name: 'zap_dast_report' # Custom name for the artifact
+          fail_action: false  # Don't fail build on findings, just report
+          cmd_options: '-a'   # Generate detailed report
+
+      - name: Upload ZAP Report as Artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: zap-dast-report
+          path: zap_report.html
