--- a/.github/workflows/dast-scan.yml
+++ b/.github/workflows/dast-scan.yml
@@ -30,7 +30,7 @@ jobs:
           gunicorn -b 0.0.0.0:5000 app:app &
           
           # Alternative if your app is in app.py:
-          # gunicorn -b 0.0.0.0:5000 app:app &
+          # gunicorn -b 127.0.0.0:5000 app:app &
 
       - name: Wait for application to start
         run: |
@@ -40,7 +40,7 @@ jobs:
       - name: Run OWASP ZAP Full Scan
         uses: zaproxy/action-full-scan@v0.12.0
         with:
-          target: 'http://localhost:5000'
+          target: 'http://127.0.0.1:5000/'
           fail_action: false  # Don't fail build on findings, just report
           cmd_options: '-a'   # Generate detailed report
 
