--- a/.github/workflows/dast-scan.yml
+++ b/.github/workflows/dast-scan.yml
@@ -25,24 +25,21 @@ jobs:
 
       - name: Run Flask app with Gunicorn
         run: |
-          # Adjust this command based on your actual app structure:
-          # If your app factory is in flaskblog/__init__.py
-          gunicorn -b 0.0.0.0:5000 app:app &
-          
-          # Alternative if your app is in app.py:
-          # gunicorn -b 127.0.0.0:5000 app:app &
+          # Use 127.0.0.1 instead of 0.0.0.0 for security
+          gunicorn -b 127.0.0.1:5000 app:app &
 
       - name: Wait for application to start
         run: |
-          sleep 10
-          curl --retry 5 --retry-delay 3 --retry-all-errors http://localhost:5000 || true
+          sleep 5
+          echo "Testing application health..."
+          curl --retry 10 --retry-delay 3 --retry-all-errors http://127.0.0.1:5000 || echo "Health check failed, but continuing..."
 
       - name: Run OWASP ZAP Full Scan
         uses: zaproxy/action-full-scan@v0.12.0
         with:
-          target: 'http://127.0.0.1:5000/'
-          fail_action: false  # Don't fail build on findings, just report
-          cmd_options: '-a'   # Generate detailed report
+          target: 'http://127.0.0.1:5000'  # Must match Gunicorn binding
+          fail_action: false
+          cmd_options: '-a'
 
       - name: Upload ZAP Report as Artifact
         uses: actions/upload-artifact@v4
