--- a/.github/workflows/dast-scan.yml
+++ b/.github/workflows/dast-scan.yml
@@ -66,4 +66,6 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: zap-reports
-          path: zap-wrk/
+          path: |
+            zap-reports.txt
+            zap-reports.html
