--- a/.github/workflows/dast-scan.yml
+++ b/.github/workflows/dast-scan.yml
@@ -56,7 +56,7 @@ jobs:
         uses: zaproxy/action-baseline@v0.11.0
         with:
           target: 'http://localhost:8080'
-          cmd_options: "-a -rw zap-wrk/zap-reports*"
+          cmd_options: "-a -rw zap/wrk/zap-reports.html -rw zap/wrk/zap-reports.txt"
 
       # -------------------------------
       # Upload ZAP reports as artifacts
