--- a/.github/workflows/dast-scan.yml
+++ b/.github/workflows/dast-scan.yml
@@ -47,7 +47,7 @@ jobs:
       # Prepare ZAP workspace
       # -------------------------------
       - name: Prepare ZAP working folder
-        run: mkdir -p zap-wrk
+        run: mkdir -p /zap/wrk
 
       # -------------------------------
       # Run OWASP ZAP DAST Scan
