--- a/.github/workflows/dast-scan.yml
+++ b/.github/workflows/dast-scan.yml
@@ -46,8 +46,8 @@ jobs:
       # -------------------------------
       # Prepare ZAP workspace
       # -------------------------------
-      - name: Prepare ZAP working folder
-        run: mkdir -p /zap/wrk
+      # - name: Prepare ZAP working folder
+      #   run: mkdir -p /zap/wrk
 
       # -------------------------------
       # Run OWASP ZAP DAST Scan
