--- a/.github/workflows/dast-scan.yml
+++ b/.github/workflows/dast-scan.yml
@@ -56,7 +56,7 @@ jobs:
         uses: zaproxy/action-baseline@v0.11.0
         with:
           target: 'http://localhost:8080'
-          cmd_options: "-a -r zap_reports.html -w zap_reports.txt"
+          cmd_options: "-a -r zap_report.html -w zap_report.txt"
 
       # -------------------------------
       # Upload ZAP reports as artifacts
