--- a/.github/workflows/dast-scan.yml
+++ b/.github/workflows/dast-scan.yml
@@ -57,7 +57,7 @@ jobs:
         uses: zaproxy/action-baseline@v0.11.0
         with:
           target: 'http://localhost:8080'
-          cmd_options: "-a -r zap_report.html -w zap_report.txt"
+          cmd_options: "-a -J zap_report.json -w zap_report.txt -r zap_report.html"
 
       # -------------------------------
       # Upload ZAP reports as artifacts
@@ -68,5 +68,6 @@ jobs:
         with:
           name: zap-reports
           path: |
+            zap_report.json
             zap_report.txt
             zap_report.html
