--- a/.github/workflows/dast-scan.yml
+++ b/.github/workflows/dast-scan.yml
@@ -57,7 +57,7 @@ jobs:
         uses: zaproxy/action-baseline@v0.11.0
         with:
           target: 'http://localhost:8080'
-          cmd_options: "-a -J zap_report.json -w zap_report.txt -r zap_report.html"
+          cmd_options: "-a"
 
       # -------------------------------
       # Upload ZAP reports as artifacts
