--- a/.github/workflows/dast-scan.yml
+++ b/.github/workflows/dast-scan.yml
@@ -51,13 +51,13 @@ jobs:
       
 
       # -------------------------------
-      # Run OWASP ZAP DAST Scan
+      # Run OWASP ZAP Baseline Scan
       # -------------------------------
       - name: Run OWASP ZAP Scan
         uses: zaproxy/action-baseline@v0.11.0
         with:
           target: 'http://localhost:8080'
-          cmd_options: "-a"
+          cmd_options: "-a"   # just active scan, no custom filenames
 
       # -------------------------------
       # Upload ZAP reports as artifacts
@@ -68,6 +68,6 @@ jobs:
         with:
           name: zap-reports
           path: |
-            zap_report.json
-            zap_report.txt
-            zap_report.html
+            report_json.json
+            report_md.md
+            report_html.html
