--- a/.github/workflows/dast-scan.yml
+++ b/.github/workflows/dast-scan.yml
@@ -59,6 +59,7 @@ jobs:
           target: 'http://localhost:8080'
           cmd_options: "-a"   
           fail_action: false
+          allow_issue_writing: false
           
 
       # -------------------------------
