--- a/.github/workflows/dast-scan.yml
+++ b/.github/workflows/dast-scan.yml
@@ -56,6 +56,7 @@ jobs:
       - name: Run OWASP ZAP Scan
         uses: zaproxy/action-baseline@v0.11.0
         with:
+          name: zap_scan
           target: 'http://localhost:8080'
           cmd_options: "-a"   
           fail_action: false
